# agentprovision

./: .env.example  .gitignore  AGENTPROVISION_MCP_INTEGRATION.md  AGENTS.md  CLAUDE.md  DATABRICKS_INTEGRATION_PLAN.md  DATABRICKS_SYNC_README.md  Dockerfile.api  E2E_TEST_FINDINGS.md  README.md  TOOL_FRAMEWORK_README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  gemini.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini  test_nan.py  test_nan_2.py  tsconfig.json  turbo.json
apps/api/: .env.example  Dockerfile  package.json  pyproject.toml  requirements.txt  seed_llm.py
apps/api/app/: __init__.py  main.py
apps/api/migrations/: 002_update_connectors_table.sql  003_add_connectors_timestamps.sql  026_add_execution_traces.sql  027_add_tenant_instances.sql  028_add_skill_configs_and_credentials.sql  029_extend_knowledge_entities.sql  030_add_knowledge_entity_description_aliases.sql  031_add_entity_category.sql  032_add_lead_scoring.sql  033_add_scoring_rubric.sql  README.md
apps/api/tests/: __init__.py  conftest.py  test_adk_client.py  test_agent_orchestration.py  test_api.py  test_auth.py  test_config.py  test_connector_test_service.py  test_dataset_databricks_trigger.py  test_dataset_sync_status.py  test_health.py  test_integration_connectors.py  test_integrations.py  test_internal_endpoints.py  test_mcp_client.py  test_memory_system.py  test_multi_llm.py  test_multi_provider.py  test_public.py  test_whitelabel.py  test_workflows_service.py
apps/mcp-server/: .env.example  Dockerfile  pyproject.toml
apps/mcp-server/src/: __init__.py  config.py  server.py
apps/mcp-server/tests/: __init__.py  test_api_client.py  (+5 more)
(+548 files in other folders)
